# Snake

./: .isort.cfg  README.md  main.py  pyproject.toml
snake/: cellgraph.py  snake.py
storage/maps/: map.txt
