[tool.poetry]
name = "snake"
version = "0.1.0"
description = "A snake game implemented with pygame"
authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
